2010-01-22  Chong Yidong  <cyd@stupidchicken.com>

	* isearch.el (isearch-allow-scroll): Doc fix (Bug#5446).

2010-01-22  Eli Zaretskii  <eliz@gnu.org>

	* jka-compr.el (jka-compr-load): If load-file is not in
	load-history, try its file-truename version.  (bug#5447)

2010-01-21  Alan Mackenzie  <acm@muc.de>

	Fix a situation where deletion of a cpp construct throws an error.
	* progmodes/cc-engine.el (c-invalidate-state-cache): Before
	invoking c-with-all-but-one-cpps-commented-out, check that the
	special cpp construct is still in the buffer.
	(c-parse-state): Record the special cpp with markers, not numbers.

2010-01-21  Kenichi Handa  <handa@m17n.org>

	* textmodes/sgml-mode.el (sgml-maybe-name-self): No need to
	process last-command-event, as it is now decoded first (Bug#5380).

2010-01-20  Chong Yidong  <cyd@stupidchicken.com>

	* term.el (term-send-raw-meta): Revert 2009-12-04 change (Bug#5330).

2010-01-20  Glenn Morris  <rgm@gnu.org>

	* indent.el (tab-always-indent): Fix custom-type.

2010-01-19  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el: Fix bug#5395: typing '#' in an empty
	buffer throws "args out of range".
	(c-set-cpp-delimiters, c-clear-cpp-delimiters): Check for EOB
	playing the role of delimiter.

2010-01-18  Stephen Leake  <stephen_leake@member.fsf.org>

	* lisp/progmodes/ada-mode.el: Fix bug#5400.
	(ada-matching-decl-start-re): Move into ada-goto-decl-start.
	(ada-goto-decl-start): Rename from ada-goto-matching-decl-start; callers
	changed.  Delete RECURSIVE parameter; never used.  Improve doc string.
	Improve comments in "is" portion.  Handle null procedure declaration.
	(ada-move-to-end): Improve doc string.

2010-01-18  Óscar Fuentes  <ofv@wanadoo.es>

	* ido.el (ido-cur-list): Initialize to nil.
	Remove obsolete information from commentary.
	(ido-choice-list): Initialize to nil.
	(ido-get-bufname): Reject minibuffers.
	(ido-make-buffer-list): If "default" is a nonexistent
	buffer, ignore it, as per the function's comment.